<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/material"
        android:icon="@drawable/selector_for_archive"
        android:title="@string/title_material" />

    <item
        android:id="@+id/messenger"
        android:icon="@drawable/selector_for_messenger"
        android:title="@string/title_messenger" />

    <item
        android:id="@+id/timetable"
        android:icon="@drawable/selector_for_timetable"
        android:title="@string/title_timetable" />

    <item
        android:id="@+id/statistics"
        android:icon="@drawable/selector_for_statistics"
        android:title="@string/title_statistics" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/selector_for_profile"
        android:title="@string/title_profile" />

</menu>