<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/material">

    <fragment
        android:id="@+id/material"
        android:name="com.skillbox.tostudy.ui.materials.MaterialForTeacherFragment"
        android:label="@string/title_material"
        tools:layout="@layout/fragment_material_for_teacher" />

    <fragment
        android:id="@+id/messenger"
        android:name="com.skillbox.tostudy.ui.messenger.MessengerForTeacherFragment"
        android:label="@string/title_messenger"
        tools:layout="@layout/fragment_messenger_for_teacher" />

    <fragment
        android:id="@+id/timetable"
        android:name="com.skillbox.tostudy.ui.timetable.TimetableForTeacherFragment"
        android:label="@string/title_timetable"
        tools:layout="@layout/fragment_timetable_for_teacher" />

    <fragment
        android:id="@+id/statistics"
        android:name="com.skillbox.tostudy.ui.statistics.StatisticsForTeacherFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics_for_teacher" />

    <fragment
        android:id="@+id/profile"
        android:name="com.skillbox.tostudy.ui.profile.ProfileForTeacherFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_for_teacher" />
</navigation>